Add label and description fields to form fields.
Introduced `label` and `description` properties to FormField.
FormFactory uses the fields from the form definition file to
set added properties.
Updated openapi docs.
